# CppPlayground

./: .gitignore  README.md
benchmarks/: CMakeLists.txt  README.md  analyzeBenchmarks.py  conanfile.txt
benchmarks/include/: iterationOverMemoryAndCache.h
benchmarks/src/: main.cpp
modularity/: README.md
